<resources>
    <string name="app_name">ECU Data Logger</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="graph_fragment">Graph Fragment</string>
    <string name="table_fragment">Table fragment</string>
    <string name="actuator_fragment">Actuator fragment</string>

    <string name="info_menu">Logger Startup</string>
    <string name="idle_menu">Idle Tune</string>
    <string name="afr_menu">AFR Tune</string>
    <string name="monitor_menu">Monitor View</string>
    <string name="graph_menu">Graph View</string>
    <string name="table_menu">Map View</string>
    <string name="actuator_menu">Actuator Tests</string>

    <string name="info_title">Startup</string>
    <string name="idle_title">Idle</string>
    <string name="afr_title">AFR</string>
    <string name="monitor_title">Monitor</string>
    <string name="graph_title">Graph</string>
    <string name="table_title">Map</string>
    <string name="actuator_title">Tests</string>
    <string name="fast_title">Fast Log</string>


    <!-- BLE stuff -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Data View -->
    <string name="RPM_label">RPM</string>
    <string name="RPM_data">- - - -</string>
    <string name="TPS_label">TPS</string>
    <string name="TPS_data">- - - -</string>
    <string name="AFR1_label">Air Fuel Ratio 1</string>
    <string name="AFR1_data">- - - -</string>
    <string name="AFR2_label">Air Fuel Ratio 2</string>
    <string name="AFR2_data">- - - -</string>
    <string name="N_data">N</string>
    <string name="EBS_data">E</string>
    <string name="CTS_label">Coolant Temp</string>
    <string name="CTS_data">- - - -</string>
    <string name="IAT_label">Intake Air Temp</string>
    <string name="IAT_data">- - - -</string>
    <string name="INJ1_label">INJ1 Duration ms</string>
    <string name="INJ1_data">- - - -</string>
    <string name="INJ2_label">INJ2 Duration ms</string>
    <string name="INJ2_data">- - - -</string>
    <string name="ADV_label">Advance Degrees</string>
    <string name="ADV_data">- - - -</string>
    <string name="AP_label">Air Pressure mbar</string>
    <string name="AP_data">- - - -</string>
    <string name="BV_label">Battery Voltage</string>
    <string name="BV_data">- - - -</string>
    <string name="AN3_label">Analog Input 3</string>
    <string name="AN3_data">- - - -</string>
    <string name="AN4_label">Analog Input 4</string>
    <string name="AN4_data">- - - -</string>
    <string name="Message_data">    </string>
    <string name="LogTime_label">Log Time</string>

    <string name="Gauge_start">- - -</string>
    <string name="AFR1_gauge">AFR 1</string>
    <string name="AFR2_gauge">AFR 2</string>

    <!-- Actuator Test -->
    <string name="ActuatorTest_label">Actuator</string>
    <string name="ActuatorResult_label">Result</string>
    <string name="Injector1_label">Injector1</string>
    <string name="Injector1_result">- - - -</string>
    <string name="Injector2_label">Injector2</string>
    <string name="Injector2_result">- - - -</string>
    <string name="Coil1_label">Coil 1</string>
    <string name="Coil1_result">- - - -</string>
    <string name="Coil2_label">Coil 2</string>
    <string name="Coil2_result">- - - -</string>
    <string name="FuelPump_label">Fuel Pump</string>
    <string name="FuelPump_result">- - - -</string>
    <string name="Tachometer_label">Tachometer</string>
    <string name="Tachometer_result">- - - -</string>

    <!-- Start Up -->
    <string name="Logger_label">Logger Info</string>
    <string name="LoggerResult_label">Result</string>
    <string name="Bluetooth_label">Bluetooth Module</string>
    <string name="Bluetooth_result">- - - -</string>
    <string name="Firmware_label">Firmware Version</string>
    <string name="Firmware_result">- - - -</string>
    <string name="Calibration_label">5v Calibration</string>
    <string name="Calibration_result">- - - -</string>
    <string name="SD_Card_label">SD Card</string>
    <string name="SD_Card_result">- - - -</string>
    <string name="Config_label">Config File</string>
    <string name="Config_File_result">- - - -</string>
    <string name="Fault_Codes_label">Fault Codes</string>
    <string name="Fault_Codes_result">- - - -</string>
    <string name="Fault_Clear_label">Faults Cleared</string>
    <string name="Fault_Clear_result">- - - -</string>
    <string name="Log_label">Log File</string>
    <string name="Log_result">- - - -</string>
    <string name="Ignition_label">Ignition</string>
    <string name="Ignition_result">- - - -</string>
    <string name="Engine_label">Engine Temp</string>
    <string name="Engine_result">- - - -</string>
    <string name="AFR_label">AFR Temp</string>
    <string name="AFR_result">- - - -</string>
    <string name="Auto_Switch_label">Fast Log Start</string>
    <string name="Auto_Switch_result">- - - -</string>
    <string name="Mode_label">Logger Mode</string>
    <string name="Mode_result">- - - -</string>
    <string name="Motorcycle_label">Motorcycle</string>
    <string name="Motorcycle_result">- - - -</string>


    <!-- Message data -->
    <string name="Testing_message">Testing</string>
    <string name="Passed_message">Passed</string>
    <string name="Failed_message">Failed</string>
    <string name="OK_message">OK</string>
    <string name="ON_message">On</string>
    <string name="IGN_ON_message">Switch IGN On</string>
    <string name="IGN_OFF_message">Switch IGN Off</string>
    <string name="Yes_message">Yes</string>
    <string name="No_message">No</string>
    <string name="Start_ENG_message">Start Engine</string>
    <string name="AFR_NA_message">AFR not in use</string>
    <string name="AFR_Err_message">AFR Error</string>
    <string name="AFR_Cold_message">AFR Cold</string>
    <string name="AFR_Ready_message">AFR Ready</string>
    <string name="Eng_Cold_message">Engine Cold</string>
    <string name="Eng_Warm_message">Engine Warm</string>
    <string name="Cold_message">Cold</string>
    <string name="Warm_message">Warm</string>
    <string name="Error_message">Error</string>
    <string name="NA_message">NA</string>
    <string name="Connected_message">ECU Connected</string>
    <string name="TimeOut_message">TimeOut - Rebooting</string>
    <string name="Fast_Logging_message">Fast Logging</string>
    <string name="No_BlueTooth_Data">** No BlueTooth Data **</string>
    <string name="Clear_message"> </string>

    <string name="AutoSwitch0_message">None</string>
    <string name="AutoSwitch1_message">In Gear</string>
    <string name="AutoSwitch2_message">After 10mins</string>
    <string name="AutoSwitch3_message">Immediately</string>

    <string name="Mode1_message">Fast Logging</string>
    <string name="Mode2_message">AFR View</string>
    <string name="Mode3_message">Monitor View</string>
    <string name="Mode4_message">Test</string>

    <string name="Motorcycle_A">MV Agusta F41000</string>
    <string name="Motorcycle_B">MV F4 750</string>
    <string name="Motorcycle_C">MV B4 910</string>
    <string name="Motorcycle_D">MV B4 750</string>
    <string name="Motorcycle_E">Ducati 996</string>
    <string name="Motorcycle_F">Ducati 916</string>
    <string name="Motorcycle_G">Ducati 748</string>
    <string name="Motorcycle_H">Ducati ST2</string>
    <string name="Motorcycle_I">Ducati ST4</string>
    <string name="Motorcycle_J">Cagiva</string>
    <string name="Motorcycle_K">Laverda</string>
    <string name="Motorcycle_L">Moto Guzzi</string>




    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_data_view">Data View</string>
</resources>
