<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_startup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="1">


        <TextView
            android:id="@+id/label_LoggerInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/Logger_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_LoggerResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/LoggerResult_label"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/label_Ignition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Ignition_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_LoggerInfo"
            app:layout_constraintTop_toBottomOf="@+id/label_LoggerInfo" />

        <TextView
            android:id="@+id/label_Ignition_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Ignition_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_LoggerResult"
            app:layout_constraintTop_toBottomOf="@+id/label_LoggerResult" />

        <TextView
            android:id="@+id/label_SDcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/SD_Card_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Ignition"
            app:layout_constraintTop_toBottomOf="@+id/label_Ignition" />

        <TextView
            android:id="@+id/label_SDcard_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/SD_Card_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Ignition_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Ignition_result" />





        <TextView
            android:id="@+id/label_Log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Log_label"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_SDcard"
            app:layout_constraintTop_toBottomOf="@+id/label_SDcard" />

        <TextView
            android:id="@+id/label_Log_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Log_result"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_SDcard_result"
            app:layout_constraintTop_toBottomOf="@+id/label_SDcard_result" />


        <TextView
            android:id="@+id/label_Firmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Firmware_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Log"
            app:layout_constraintTop_toBottomOf="@+id/label_Log" />

        <TextView
            android:id="@+id/label_Firmware_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/FuelPump_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Log_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Log_result" />


        <TextView
            android:id="@+id/label_Config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Config_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Firmware"
            app:layout_constraintTop_toBottomOf="@+id/label_Firmware" />

        <TextView
            android:id="@+id/label_Config_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Config_File_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Firmware_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Firmware_result" />

        <TextView
            android:id="@+id/label_AutoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Auto_Switch_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Config"
            app:layout_constraintTop_toBottomOf="@+id/label_Config" />

        <TextView
            android:id="@+id/label_AutoSwitch_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Auto_Switch_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Config_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Config_result" />

        <TextView
            android:id="@+id/label_Mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Mode_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_AutoSwitch"
            app:layout_constraintTop_toBottomOf="@+id/label_AutoSwitch" />

        <TextView
            android:id="@+id/label_Mode_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Mode_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_AutoSwitch_result"
            app:layout_constraintTop_toBottomOf="@+id/label_AutoSwitch_result" />

        <TextView
            android:id="@+id/label_Motorcycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Motorcycle_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Mode"
            app:layout_constraintTop_toBottomOf="@+id/label_Mode" />

        <TextView
            android:id="@+id/label_Motorcycle_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Motorcycle_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Mode_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Mode_result" />


        <TextView
            android:id="@+id/label_Fault_Codes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Fault_Codes_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Motorcycle"
            app:layout_constraintTop_toBottomOf="@+id/label_Motorcycle" />

        <TextView
            android:id="@+id/label_Fault_Codes_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Fault_Codes_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Motorcycle_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Motorcycle_result" />

        <TextView
            android:id="@+id/label_Fault_Clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Fault_Clear_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Fault_Codes"
            app:layout_constraintTop_toBottomOf="@+id/label_Fault_Codes" />

        <TextView
            android:id="@+id/label_Fault_Clear_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Fault_Clear_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Fault_Codes_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Fault_Codes_result" />





        <TextView
            android:id="@+id/label_AFR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/AFR_label"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_Fault_Clear"
            app:layout_constraintTop_toBottomOf="@+id/label_Fault_Clear" />

        <TextView
            android:id="@+id/label_AFR_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/AFR_result"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_Fault_Clear_result"
            app:layout_constraintTop_toBottomOf="@+id/label_Fault_Clear_result" />

        <TextView
            android:id="@+id/label_Engine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Engine_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/label_AFR"
            app:layout_constraintTop_toBottomOf="@+id/label_AFR" />

        <TextView
            android:id="@+id/label_Engine_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Engine_result"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/label_AFR_result"
            app:layout_constraintTop_toBottomOf="@+id/label_AFR_result" />


        <TextView
            android:id="@+id/label_Message_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Message_data"
            android:textAlignment="center"
            android:textColor="?attr/colorError"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>


</GridLayout>
