<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fastLogging"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="1">

        <TextView
            android:id="@+id/Message_Fast_Logging"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Fast_Logging_message"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/Message_No_BlueTooth_Data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:text="@string/No_BlueTooth_Data"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/Message_Fast_Logging"
            app:layout_constraintStart_toStartOf="@+id/Message_Fast_Logging"
            app:layout_constraintTop_toBottomOf="@+id/Message_Fast_Logging" />



        <TextView
            android:id="@+id/label_Message_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Message_data"
            android:textAlignment="center"
            android:textColor="?attr/colorError"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
